--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             backdrop-filter: blur(30px) saturate(150%);
             border-radius: 24px;
             border: 1px solid rgba(255, 255, 255, 0.1);
-            display: flex; flex-direction: column;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
             box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
             transform-style: preserve-3d;
             transition: height 0.5s cubic-bezier(0.23, 1, 0.32, 1), transform 0.4s ease;
@@ -152,7 +154,16 @@
         .contact-link-item i { font-size: 20px; width: 30px; text-align: center; color: var(--primary-accent); margin-right: 15px; }
         .spotify-embed { width: 100%; height: 380px; border: none; border-radius: 12px; margin-top: 10px; }
         
-        .card-buttons { display: flex; background: rgba(0, 0, 0, 0.2); margin-top: auto; position: sticky; bottom: 0; left: 0; backdrop-filter: blur(10px); border-top: 1px solid rgba(255, 255, 255, 0.05); }
+        .card-buttons { 
+            display: flex;
+            background: rgba(0, 0, 0, 0.2);
+            margin-top: auto;
+            position: relative;
+            bottom: unset;
+            left: 0;
+            backdrop-filter: blur(10px);
+            border-top: 1px solid rgba(255, 255, 255, 0.05);
+         }
         .card-buttons button { flex: 1; background: none; border: none; color: var(--text-muted); padding: 16px 5px; font-family: var(--font-main); font-size: 11px; font-weight: 500; text-transform: uppercase; letter-spacing: 1px; cursor: pointer; outline: 0; position: relative; transition: color 0.3s ease; }
         .card-buttons button::after { content: ''; position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); width: 0; height: 2px; background: var(--primary-accent); border-radius: 2px; transition: width 0.4s cubic-bezier(0.23, 1, 0.32, 1); }
         .card-buttons button.is-active, .card-buttons button:hover { color: var(--text-color); }
@@ -289,71 +300,71 @@
     </div>
 
         <audio id="background-music" loop>
-        <source src="https://files.catbox.moe/gdpugr.aac" type="audio/aac">
+        <source src="https://files.catbox.moe/yyrorx.mp3" type="audio/mp3">
     </audio>
 
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const cardContainer = document.querySelector(".card-container");
-            const card = document.querySelector(".card");
-            const buttons = document.querySelectorAll(".card-buttons button");
-            const sections = document.querySelectorAll(".card-section");
-            const backgroundMusic = document.getElementById('backgroundMusic');
-            let musicStarted = false;
-            const isMobile = window.matchMedia("(max-width: 480px)").matches;
+    document.addEventListener('DOMContentLoaded', () => {
+        const cardContainer = document.querySelector(".card-container");
+        const card = document.querySelector(".card");
+        const buttons = document.querySelectorAll(".card-buttons button");
+        const sections = document.querySelectorAll(".card-section");
+        const backgroundMusic = document.getElementById('background-music'); // <- ID diperbaiki
+        let musicStarted = false;
+        const isMobile = window.matchMedia("(max-width: 480px)").matches;
 
-            buttons.forEach(btn => {
-                btn.addEventListener("click", e => {
-                    const targetSectionId = e.target.getAttribute("data-section");
-                    const targetSection = document.querySelector(targetSectionId);
-                    if (!musicStarted && backgroundMusic) {
-                        backgroundMusic.volume = 0.3;
-                        backgroundMusic.play().catch(err => console.error("Audio play failed:", err));
-                        musicStarted = true;
-                    }
-                    card.classList.toggle("is-active", targetSectionId !== "#about");
-                    card.setAttribute("data-state", targetSectionId);
-                    sections.forEach(s => s.classList.remove("is-active"));
-                    buttons.forEach(b => b.classList.remove("is-active"));
-                    e.target.classList.add("is-active");
-                    targetSection.classList.add("is-active");
-                });
-            });
-
-            if (!isMobile) {
-                cardContainer.addEventListener("mousemove", (e) => {
-                    const rect = cardContainer.getBoundingClientRect();
-                    const x = e.clientX - rect.left; const y = e.clientY - rect.top;
-                    const { width, height } = rect;
-                    const rotateX = (y / height - 0.5) * -14;
-                    const rotateY = (x / width - 0.5) * 14;
-                    card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
-                });
-                cardContainer.addEventListener("mouseleave", () => { card.style.transform = 'rotateX(0deg) rotateY(0deg)'; });
-            }
-            
-            // Typing Effect
-            const jobTitleElement = document.getElementById("job-title-animated");
-            const cursorElement = document.getElementById("typing-cursor");
-            const jobTitles = ["Pelajar", "JavaScript Developer", "Bot Creator"];
-            let titleIndex = 0; let charIndex = 0; let isDeleting = false;
-            function type() {
-                const currentTitle = jobTitles[titleIndex];
-                let displayText = isDeleting ? currentTitle.substring(0, charIndex - 1) : currentTitle.substring(0, charIndex + 1);
-                jobTitleElement.textContent = displayText;
-                jobTitleElement.appendChild(cursorElement);
-                charIndex = isDeleting ? charIndex - 1 : charIndex + 1;
-                if (!isDeleting && charIndex === currentTitle.length) {
-                    setTimeout(() => isDeleting = true, 2000);
-                } else if (isDeleting && charIndex === 0) {
-                    isDeleting = false;
-                    titleIndex = (titleIndex + 1) % jobTitles.length;
+        buttons.forEach(btn => {
+            btn.addEventListener("click", e => {
+                const targetSectionId = e.target.getAttribute("data-section");
+                const targetSection = document.querySelector(targetSectionId);
+                if (!musicStarted && backgroundMusic) {
+                    backgroundMusic.volume = 0.3;
+                    backgroundMusic.play().catch(err => console.error("Audio play failed:", err));
+                    musicStarted = true;
                 }
-                const typingSpeed = isDeleting ? 75 : 150;
-                setTimeout(type, typingSpeed);
-            }
-            type();
+                card.classList.toggle("is-active", targetSectionId !== "#about");
+                card.setAttribute("data-state", targetSectionId);
+                sections.forEach(s => s.classList.remove("is-active"));
+                buttons.forEach(b => b.classList.remove("is-active"));
+                e.target.classList.add("is-active");
+                targetSection.classList.add("is-active");
+            });
         });
-    </script>
+
+        if (!isMobile) {
+            cardContainer.addEventListener("mousemove", (e) => {
+                const rect = cardContainer.getBoundingClientRect();
+                const x = e.clientX - rect.left; const y = e.clientY - rect.top;
+                const { width, height } = rect;
+                const rotateX = (y / height - 0.5) * -14;
+                const rotateY = (x / width - 0.5) * 14;
+                card.style.transform = `rotateX(${rotateX}deg) rotateY(${rotateY}deg)`;
+            });
+            cardContainer.addEventListener("mouseleave", () => { card.style.transform = 'rotateX(0deg) rotateY(0deg)'; });
+        }
+
+        // Typing Effect
+        const jobTitleElement = document.getElementById("job-title-animated");
+        const cursorElement = document.getElementById("typing-cursor");
+        const jobTitles = ["Pelajar", "JavaScript Developer", "Bot Creator"];
+        let titleIndex = 0; let charIndex = 0; let isDeleting = false;
+        function type() {
+            const currentTitle = jobTitles[titleIndex];
+            let displayText = isDeleting ? currentTitle.substring(0, charIndex - 1) : currentTitle.substring(0, charIndex + 1);
+            jobTitleElement.textContent = displayText;
+            jobTitleElement.appendChild(cursorElement);
+            charIndex = isDeleting ? charIndex - 1 : charIndex + 1;
+            if (!isDeleting && charIndex === currentTitle.length) {
+                setTimeout(() => isDeleting = true, 2000);
+            } else if (isDeleting && charIndex === 0) {
+                isDeleting = false;
+                titleIndex = (titleIndex + 1) % jobTitles.length;
+            }
+            const typingSpeed = isDeleting ? 75 : 150;
+            setTimeout(type, typingSpeed);
+        }
+        type();
+    });
+</script>
 </body>
 </html>
