--- a/index.html
+++ b/index.html
@@ -26,10 +26,17 @@
             const nameInput = document.getElementById('nameInput').value;
             const loadingSpinner = document.getElementById('loading');
 
+            const swalDefault = Swal.mixin({
+              background: '#1e1e2f',
+              color: '#ffffff',
+              confirmButtonColor: '#4caf50',
+              cancelButtonColor: '#ff4444'
+            });
+
             if (!nameInput) {
-                Swal.fire({
-                    title: 'GAK BOLEH KOSONG!😡',
-                    icon: 'info',
+                swalDefault.fire({
+                    title: 'GAK BOLEH KOSONG!',
+                    icon: 'error',
                     confirmButtonText: 'OK'
                 });
                 return;
@@ -363,7 +370,7 @@
                 const randomKhodam = khodams[Math.floor(Math.random() * khodams.length)];
                 loadingSpinner.style.display = 'none';
 
-                Swal.fire({
+                swalDefault.fire({
                     title: `Khodam: ${randomKhodam.name}`,
                     html: `<p>${randomKhodam.meaning}</p>`,
                     icon: 'success',
@@ -373,4 +380,5 @@
         }
     </script>
 </body>
+
 </html>
