--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             const loadingSpinner = document.getElementById('loading');
 
             const swalDefault = Swal.mixin({
-              background: '#1e1e2f',
+              background: '#2a2a40',
               confirmButtonColor: '#4caf50',
               cancelButtonColor: '#ff4444',
               customClass: {
@@ -386,5 +386,6 @@
 </body>
 
 </html>
+
 
 
